add camera and change a little

--- a/BoxEngine/BoxEngine.vcxproj.filters
+++ b/BoxEngine/BoxEngine.vcxproj.filters
@@ -1351,6 +1351,9 @@
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
     <ClInclude Include="src\BoxEngineKeys.h" />
+    <ClInclude Include="src\Camera\Camera.h" />
+    <ClInclude Include="src\Camera\PerspectiveCamera.h" />
+    <ClInclude Include="src\Camera\OrthographicCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp">
@@ -1395,5 +1398,6 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
+    <ClCompile Include="src\Camera\PerspectiveCamera.cpp" />
   </ItemGroup>
 </Project>
