--- a/BoxEngine/BoxEngine.vcxproj
+++ b/BoxEngine/BoxEngine.vcxproj
@@ -96,6 +96,9 @@
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\BoxEngine.h" />
     <ClInclude Include="src\BoxTime.h" />
+    <ClInclude Include="src\Camera\Camera.h" />
+    <ClInclude Include="src\Camera\OrthographicCamera.h" />
+    <ClInclude Include="src\Camera\PerspectiveCamera.h" />
     <ClInclude Include="src\EntryPoint.h" />
     <ClInclude Include="src\Events\Event.h" />
     <ClInclude Include="src\Events\EventSystem.h" />
@@ -536,6 +539,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\BoxTime.cpp" />
+    <ClCompile Include="src\Camera\PerspectiveCamera.cpp" />
     <ClCompile Include="src\Events\EventSystem.cpp" />
     <ClCompile Include="src\LayerStack.cpp" />
     <ClCompile Include="src\Renderer\IndexBuffer.cpp" />
