Add more cameras

--- a/BoxEngine/BoxEngine.vcxproj
+++ b/BoxEngine/BoxEngine.vcxproj
@@ -97,6 +97,8 @@
     <ClInclude Include="src\BoxEngine.h" />
     <ClInclude Include="src\BoxTime.h" />
     <ClInclude Include="src\Camera\Camera.h" />
+    <ClInclude Include="src\Camera\OrthoCamera2D.cpp" />
+    <ClInclude Include="src\Camera\OrthoCamera2D.h" />
     <ClInclude Include="src\Camera\OrthographicCamera.h" />
     <ClInclude Include="src\Camera\PerspectiveCamera.h" />
     <ClInclude Include="src\EntryPoint.h" />
@@ -539,6 +541,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\BoxTime.cpp" />
+    <ClCompile Include="src\Camera\OrthographicCamera.cpp" />
     <ClCompile Include="src\Camera\PerspectiveCamera.cpp" />
     <ClCompile Include="src\Events\EventSystem.cpp" />
     <ClCompile Include="src\LayerStack.cpp" />
